# hop

./: Cargo.toml  Justfile  README.md  TODO
art/: browser.ase  folder.ase  image.ase  selection.ase
art/browser/: back.ase  browser.ase  text.ase
backend/: Cargo.toml
backend/src/: rust.pest
backend/src/browser/: utils.rs
backend/src/buffer/: buffer.rs  ft.rs  ft_test.rs
browser/: Cargo.toml
browser/src/: browser.rs
buffer/: Cargo.toml
buffer/src/: buffer.rs  ft.rs  ft_test.rs  lib.rs  syntax.rs
buffer/src/res/: default.syn  rust.syn
misc/: icon.ase
src/: browser.rs  buffer.rs  lib.rs  main.rs
src/backends/: mod.rs
src/backends/browser/: browser.rs  utils.rs
src/browser/: browser.rs  mod.rs  utils.rs  view.rs
src/buffer/: buffer.rs  ft.rs  ft_test.rs  mod.rs  syntax.rs  theme.rs
src/res/syntax/: rust.syn
src/views/: browser.rs  buffer.rs  mod.rs  theme.rs
src/views/browser/: browser.rs
src/views/buffer/: buffer.rs  mod.rs
src/views/buffer/res/: font.rs
suite/: Cargo.toml
suite/src/: lib.rs
views/: Cargo.toml
views/src/: main.rs
views/src/browser/: browser.rs
views/src/buffer/: theme.rs
