# wengwengweng

[package]
name = "hop"
description = "Hanging-out Place"
version = "0.1.0"
authors = ["t <voygagaga@outlook.com>"]
edition = "2018"

[dependencies]
pom = "3.0.0"
syntect = "3.1.0"
regex = "1.1.2"
gctx = "0.1.0"
clipboard = "0.5.0"
lsp-types = "0.56.0"
dirty = { git = "https://github.com/slmjkdbtl/DIRTY" }

