# wengwengweng

[package]
name = "HoP"
description = "Hanging-out Place"
version = "0.1.0"
authors = ["t <voygagaga@outlook.com>"]
edition = "2018"

[workspace]
members = [
	"buffer",
	"browser",
	"suite",
]

[dependencies]
gctx = "0.2.0"
dirty = { git = "https://github.com/slmjkdbtl/DIRTY" }
suite = { path = "suite" }

